added hover states for buttons and links

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   <title>Clipboard landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <header class="header">
@@ -111,12 +105,11 @@
       <li class="footer__list-item">Privacy Policy</li>
       <li class="footer__list-item">Press Kit</li>
       <li class="footer__list-item">Install Guide</li>
-      <li class="footer__list-item">Made By</li>
     </ul>
     <div class="footer__socials">
-      <img src="images/icon-facebook.svg" alt="facebook link">
-      <img src="images/icon-twitter.svg" alt="twitter link">
-      <img src="images/icon-instagram.svg" alt="instagram link">
+      <img class="footer__socials-item" src="images/icon-facebook.svg" alt="facebook link">
+      <img class="footer__socials-item" src="images/icon-twitter.svg" alt="twitter link">
+      <img class="footer__socials-item" src="images/icon-instagram.svg" alt="instagram link">
     </div>
   </footer>
 </body>
