tweaked alt tags, added aria labels to social links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="header__wrapper">
       <section class="header__background">
-        <img class ="header__logo" src="./images/logo.svg" alt="logo">
+        <img class ="header__logo" src="./images/logo.svg" alt="clipboard logo.">
       </section>
     </div>
     <section class="header__content">
@@ -35,7 +35,7 @@
         meaning you can access your snippets immediately on all your 
         devices. Our Mac and iOS apps will help you organize everything.</p>
       <div class="snippets__wrapper">
-      <img class="snippets__img" src="./images/image-computer.png" alt="computer">
+      <img class="snippets__img" src="./images/image-computer.png" alt="a mac.">
       <div class="snippets__info">
         <div class="snippets__search">
           <h2 class="title title--small">Quick Search</h2>
@@ -56,33 +56,33 @@
       <h2 class="access__title title">Access Clipboard anywhere</h2>
       <p class="access__text text">Whether you’re on the go, or at your computer, you can access all your Clipboard 
         snippets in a few simple clicks.</p>
-      <img class ="access__img" src="./images/image-devices.png" alt="devices">
+      <img class ="access__img" src="./images/image-devices.png" alt="iphone on the left, ipad on the right.">
     </section>
     <section class="supercharge">
       <h2 class="supercharge__title title">Supercharge your workflow</h2>
       <p class="text">We’ve got the tools to boost your productivity.</p>
       <div class="supercharge__info">
         <div class="supercharge__create info">
-          <img class="supercharge__icon" src="images/icon-blacklist.svg" alt>
+          <img class="supercharge__icon" src="images/icon-blacklist.svg" alt="">
           <h2 class="title title--small">Create blacklists</h2>
           <p class="text--small text">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <div class="supercharge__plain info">
-          <img class="supercharge__icon" src="images/icon-text.svg" alt>
+          <img class="supercharge__icon" src="images/icon-text.svg" alt="">
           <h2 class="title title--small">Plain text snippets</h2>
           <p class="text--small text">Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <div class="supercharge__sneak info">
-          <img class="supercharge__icon" src="images/icon-preview.svg" alt>
+          <img class="supercharge__icon" src="images/icon-preview.svg" alt="">
           <h2 class="title title--small">Sneak preview</h2>
           <p class="text text--small">Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>
         <div class="supercharge__brands">
-          <img class="supercharge__logo" src="./images/logo-google.png" alt="google logo">
-          <img class="supercharge__logo" src="./images/logo-ibm.png" alt="ibm logo">
-          <img class="supercharge__logo" src="./images/logo-microsoft.png" alt="microsoft logo">
-          <img class="supercharge__logo" src="./images/logo-hp.png" alt="hewlett packard logo">
-          <img class="supercharge__logo" src="./images/logo-vector-graphics.png" alt="vector graphics logo">
+          <img class="supercharge__logo" src="./images/logo-google.png" alt="google.">
+          <img class="supercharge__logo" src="./images/logo-ibm.png" alt="ibm.">
+          <img class="supercharge__logo" src="./images/logo-microsoft.png" alt="microsoft.">
+          <img class="supercharge__logo" src="./images/logo-hp.png" alt="hewlett packard enterprise.">
+          <img class="supercharge__logo" src="./images/logo-vector-graphics.png" alt="vector graphics.">
         </div>
       </div>
     </section>
@@ -98,7 +98,7 @@
     </section>
   </main>
   <footer class="footer">
-    <img class="footer__logo" src="images/logo.svg" alt="logo">
+    <img class="footer__logo" src="images/logo.svg" alt="clipboard logo.">
     <ul class="footer__list">
       <li class="footer__list-item">FAQs</li>
       <li class="footer__list-item">Contact Us</li>
@@ -107,9 +107,9 @@
       <li class="footer__list-item">Install Guide</li>
     </ul>
     <div class="footer__socials">
-      <img class="footer__socials-item" src="images/icon-facebook.svg" alt="facebook link">
-      <img class="footer__socials-item" src="images/icon-twitter.svg" alt="twitter link">
-      <img class="footer__socials-item" src="images/icon-instagram.svg" alt="instagram link">
+      <a href="#" class="footer__socials-item" aria-label="facebook"><img src="images/icon-facebook.svg" alt=""></a>
+      <a href="#" class="footer__socials-item" aria-label="twitter"><img class="footer__socials-item" src="images/icon-twitter.svg" alt=""></a>
+      <a href="#" class="footer__socials-item" aria-label="instagram"><img class="footer__socials-item" src="images/icon-instagram.svg" alt=""></a>
     </div>
   </footer>
 </body>
